--- a/package.json
+++ b/package.json
@@ -8,16 +8,12 @@
   ],
   "main": "src/index.js",
   "dependencies": {
-    "@react-three/cannon": "4.4.0",
     "@react-three/drei": "4.1.8",
     "@react-three/fiber": "6.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.0",
-    "react-three-fbx-viewer": "1.0.0",
-    "react-three-fiber": "6.0.13",
-    "three": "0.127.0",
-    "three-fbx-loader": "1.0.3"
+    "three": "0.127.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
